--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <span></span>
         <span></span>
       </div>
-      <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar">
+      <nav class="navbar navbar-expand-md fixed-top scrolling-navbar">
         <div class="container">
           <a href="index.html" class="navbar-brand"><img src="img/logo-200.png" alt=""></a>       
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +43,7 @@
                 <a class="nav-link page-scroll" href="#home">Главная</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link page-scroll" href="#services">О нас</a>
+                <a class="nav-link page-scroll" href="#services">О&nbsp;нас</a>
               </li>  
               <li class="nav-item">
                 <a class="nav-link page-scroll" href="#features">Услуги</a>
